Definito stile finale

--- a/Primo_anno/Primo_semestre/ps.html
+++ b/Primo_anno/Primo_semestre/ps.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WikiUni - Your personal course organizer</title>
-    <link rel="stylesheet" href="../../css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/home.css">
 </head>
 
@@ -15,7 +15,7 @@
         <div class="row">
             <h1 class="titolo">Primo Anno - Primo Semestre</h1>
         </div>
-        <div class="row">
+        <div class="row" id="main">
             <a class="btn btn-success" href="./ML/ml.html">Machine Learning - 6 CFU</a>
             <a class="btn btn-success" href="./AI/ai.html">Artificial Intelligence - 6 CFU</a>
             <a class="btn btn-success" href="./R1/r1.html">Robotics 1 - 6 CFU</a>
@@ -24,7 +24,7 @@
             <a class="btn btn-success" href="./NN/nn.html">Neural Networks - 6 CFU</a>
             <a class="btn btn-success" href="./RL/rl.html">Reinforcement Learning - 6 CFU</a>
         </div>
-        <div class="row">
+        <div class="row" id="main">
             <a class="btn btn-success" id="orari" href="">Orari</a>
             <a class="btn btn-success" id="home" href="../../index.html">Home</a>
         </div>
