--- a/Primo_anno/Primo_semestre/DL/dl.html
+++ b/Primo_anno/Primo_semestre/DL/dl.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WikiUni - Your personal course organizer</title>
-    <link rel="stylesheet" href="../../../css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
 </head>
 
@@ -15,7 +15,7 @@
         <div class="row" id="titolo">
             <h1 class="titolo">Deep Learning - 6 CFU</h1>
         </div>
-        <div class="row" id="main">
+        <div class="row" id="caption">
             <h3 id="info">Prof:
                 <p>Fabrizio Silvestri</p>
             </h3>
@@ -40,7 +40,7 @@
                 <p>knhbkjuhjl</p>
             </h3>
         </div>
-        <div class="row">
+        <div class="row" id="but">
             <a class="btn btn-success" id="home" href="../ps.html">Back</a>
         </div>
     </div>
