--- a/Primo_anno/Primo_semestre/AI/ai.html
+++ b/Primo_anno/Primo_semestre/AI/ai.html
@@ -8,6 +8,7 @@
     <title>WikiUni - Your personal course organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
+    <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
 </head>
 
 <body>
@@ -17,27 +18,29 @@
         </div>
         <div class="row" id="caption">
             <h3 id="info">Prof:
-                <p>Fernando Aixela</p>
+                <p>Franco Aixela</p>
             </h3>
             <br>
             <h3 class="info">Mail:
-                <p>iocchi@diag.uniroma1.it</p>
+                <p>Non disponibile</p>
             </h3>
             <br>
             <h3 class="info">Indicazioni mail:
-                <p>Inserire <b>[ML]</b> come prefisso oggetto (mail filter)</p>
+                <p>Inserire <b>[AI]</b> come prefisso oggetto (mail filter)</p>
+                <p>Risponde alle mail principalmente il Martedì</p>
             </h3>
             <br>
             <h3 class="info">Sito:
-                <p>ubkbjnjb</p>
+                <p><a class="btn btn-success" id="inner" href="https://elearning.uniroma1.it/theme/continuum/infocourse.php?course=13728&popup=1">Vai</a></p>
             </h3>
-            <br>
-            <h3 class="info">Classroom:
-                <p>jlb lnjk</p>
+            <br>https://elearning.uniroma1.it/course/view.php?id=15391
+            <h3 class="info">Moodle:
+                <p>Non disponibile</p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>knhbkjuhjl</p>
+                <p>Prova scritta con 6 domande: 3 su, 3 su</p>
+                <p><i>Alternativa: </i> 2 esoneri (inizio novembre, metà dicembre)</p>
             </h3>
         </div>
         <div class="row" id="but">
