--- a/Primo_anno/Primo_semestre/DL/dl.html
+++ b/Primo_anno/Primo_semestre/DL/dl.html
@@ -8,6 +8,7 @@
     <title>WikiUni - Your personal course organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
+    <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
 </head>
 
 <body>
@@ -25,19 +26,23 @@
             </h3>
             <br>
             <h3 class="info">Indicazioni mail:
-                <p>Inserire <b>[ML]</b> come prefisso oggetto (mail filter)</p>
+                <p>Nessuna indicazione in particolare</p>
             </h3>
             <br>
             <h3 class="info">Sito:
-                <p>ubkbjnjb</p>
+                <p>Non disponibile</p>
             </h3>
             <br>
-            <h3 class="info">Classroom:
-                <p>jlb lnjk</p>
+            <h3 class="info">Codice Classroom:
+                <p>m6lhe2m</p>
+            </h3>
+            <br>
+            <h3 class="info">Ricevimento:
+                <p>Non disponibile</p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>knhbkjuhjl</p>
+                <p>Discussione progetto</p>
             </h3>
         </div>
         <div class="row" id="but">
