--- a/Primo_anno/Primo_semestre/ML/ml.html
+++ b/Primo_anno/Primo_semestre/ML/ml.html
@@ -8,6 +8,7 @@
     <title>WikiUni - Your personal course organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
+    <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
 </head>
 
 <body>
@@ -29,15 +30,20 @@
             </h3>
             <br>
             <h3 class="info">Sito:
-                <p>ubkbjnjb</p>
+                <p><a class="btn btn-success" id="inner" href="https://sites.google.com/diag.uniroma1.it/machine-learning/">Vai</a></p>
             </h3>
             <br>
-            <h3 class="info">Classroom:
-                <p>jlb lnjk</p>
+            <h3 class="info">Codice Classroom:
+                <p>vklramt</p>
+            </h3>
+            <br>
+            <h3 class="info">Ricevimento:
+                <p>Mercoledì alle 17.00</p>
+                <p><a class="btn btn-success" id="inner" href="https://uniroma1.zoom.us/j/85043908588?pwd=TVV2Q3pFL2N5VjVmdEt4bitHM0Qydz09 ">Zoom Ricevimento</a></p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>knhbkjuhjl</p>
+                <p>Prova scritta + 2 homework</p>
             </h3>
         </div>
         <div class="row" id="but">
