--- a/Primo_anno/Primo_semestre/NN/nn.html
+++ b/Primo_anno/Primo_semestre/NN/nn.html
@@ -8,6 +8,7 @@
     <title>WikiUni - Your personal course organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
+    <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
 </head>
 
 <body>
@@ -17,19 +18,13 @@
         </div>
         <div class="row" id="caption">
             <h3 id="info">Prof:
-                <p>Luca Iocchi</p>
+                <p>Danilo Comminiello</p>
+                <p>Simone Scardapane</p>
             </h3>
             <br>
             <h3 class="info">Mail:
-                <p>iocchi@diag.uniroma1.it</p>
-            </h3>
-            <br>
-            <h3 id="info">Prof:
-                <p>Luca Iocchi</p>
-            </h3>
-            <br>
-            <h3 class="info">Mail:
-                <p>iocchi@diag.uniroma1.it</p>
+                <p>danilo.comminiello@uniroma1.it</p>
+                <p>simone.scardapane@uniroma1.it</p>
             </h3>
             <br>
             <h3 class="info">Indicazioni mail:
@@ -37,15 +32,19 @@
             </h3>
             <br>
             <h3 class="info">Sito:
-                <p>ubkbjnjb</p>
+                <p><a class="btn btn-success" id="inner" href="https://sites.google.com/diag.uniroma1.it/machine-learning/">Vai</a></p>
             </h3>
             <br>
-            <h3 class="info">Classroom:
-                <p>jlb lnjk</p>
+            <h3 class="info">Codice Classroom:
+                <p>3beya43</p>
+            </h3>
+            <br>
+            <h3 class="info">Ricevimento:
+                <p>Tramite appuntamento</p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>knhbkjuhjl</p>
+                <p>Prova scritta + 2 homework</p>
             </h3>
         </div>
         <div class="row" id="but">
