--- a/Primo_anno/Primo_semestre/R1/r1.html
+++ b/Primo_anno/Primo_semestre/R1/r1.html
@@ -8,6 +8,7 @@
     <title>WikiUni - Your personal course organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
+    <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
                 <p>Luca Iocchi</p>
             </h3>
             <br>
-            <h3 class="info">Mail:
+            <h3 class="info">Mail: deluca [at] diag [dot] uniroma1 [dot] it robotics1_2022-23@diag.uniroma1.it
                 <p>iocchi@diag.uniroma1.it</p>
             </h3>
             <br>
@@ -28,16 +29,16 @@
                 <p>Inserire <b>[ML]</b> come prefisso oggetto (mail filter)</p>
             </h3>
             <br>
-            <h3 class="info">Sito:
+            <h3 class="info">Sito: http://www.diag.uniroma1.it/~deluca/rob1_en.php
                 <p>ubkbjnjb</p>
             </h3>
             <br>
-            <h3 class="info">Classroom:
+            <h3 class="info">Google Group: http://www.diag.uniroma1.it/~deluca/rob1_en.php#GG
                 <p>jlb lnjk</p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>knhbkjuhjl</p>
+                <p>Prova scritta</p>
             </h3>
         </div>
         <div class="row" id="but">
