--- a/Primo_anno/Primo_semestre/RL/rl.html
+++ b/Primo_anno/Primo_semestre/RL/rl.html
@@ -8,6 +8,7 @@
     <title>WikiUni - Your personal course organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
+    <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
 </head>
 
 <body>
@@ -17,27 +18,38 @@
         </div>
         <div class="row" id="caption">
             <h3 id="info">Prof:
-                <p>Luca Iocchi</p>
+                <p>Roberto Capobianco</p>
             </h3>
             <br>
             <h3 class="info">Mail:
-                <p>iocchi@diag.uniroma1.it</p>
+                <p>capobianco@diag.uniroma1.it</p>
             </h3>
             <br>
             <h3 class="info">Indicazioni mail:
-                <p>Inserire <b>[ML]</b> come prefisso oggetto (mail filter)</p>
+                <p>Comunicare preferibilmente tramite Classroom</p>
             </h3>
             <br>
             <h3 class="info">Sito:
-                <p>ubkbjnjb</p>
+                <p><a class="btn btn-success" id="inner" href="https://sites.google.com/diag.uniroma1.it/machine-learning/">Vai</a></p>
             </h3>
             <br>
-            <h3 class="info">Classroom:
-                <p>jlb lnjk</p>
+            <h3 class="info">Codice Classroom:
+                <p>vklramt</p>
+            </h3>
+            <br>
+            <h3 class="info">Ricevimento:
+                <p>Giovedì, 15:30-17:30pm previo appuntamento</p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>knhbkjuhjl</p>
+                <p>3 homeworks (15% ciascuno) o esame scritto: 45%;</p>
+                <p>Progetto finale: 50%</p>
+                <p>Bonus di partecipazione alla lezione: 5%</p>
+            </h3>
+            <br>
+            <h3 class="info">Lezioni registrate:
+                <p>Lezioni in diretta su Zoom, successivamente caricate su Classroom o Youtube</p>
+                <p><a class="btn btn-success" id="inner" href="https://sites.google.com/diag.uniroma1.it/machine-learning/">Zoom Lezione</a></p>
             </h3>
         </div>
         <div class="row" id="but">
