--- a/Primo_anno/Primo_semestre/RP/rp.html
+++ b/Primo_anno/Primo_semestre/RP/rp.html
@@ -8,6 +8,7 @@
     <title>WikiUni - Your personal course organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
+    <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
             <h3 class="info">Indicazioni mail:
                 <p>Inserire <b>[ML]</b> come prefisso oggetto (mail filter)</p>
             </h3>
-            <br>
+            <br>kbrncgq
             <h3 class="info">Sito:
                 <p>ubkbjnjb</p>
             </h3>
