--- a/Primo_anno/Primo_semestre/ps.html
+++ b/Primo_anno/Primo_semestre/ps.html
@@ -8,6 +8,7 @@
     <title>WikiUni - Your personal course organizer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/home.css">
+    <link rel="icon" type="image/x-icon" href="../../pic/unirm1.ico">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
             <a class="btn btn-success" href="./RL/rl.html">Reinforcement Learning - 6 CFU</a>
         </div>
         <div class="row" id="main">
-            <a class="btn btn-success" id="orari" href="">Orari</a>
+            <a class="btn btn-success" id="orari" href="https://docs.google.com/spreadsheets/d/16g8h6ZPo9r9MDEV0L8On_UrVVa9PYCeu/edit#gid=1999740778">Orari</a>
             <a class="btn btn-success" id="home" href="../../index.html">Home</a>
         </div>
     </div>
