--- a/Primo_anno/Primo_semestre/AI/ai.html
+++ b/Primo_anno/Primo_semestre/AI/ai.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiUni - Your personal course organizer</title>
+    <title>Artificial Intelligence</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
     <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
@@ -18,29 +18,36 @@
         </div>
         <div class="row" id="caption">
             <h3 id="info">Prof:
-                <p>Franco Aixela</p>
+                <p>Santiago Franco Aixela</p>
             </h3>
             <br>
             <h3 class="info">Mail:
-                <p>Non disponibile</p>
+                <p>Santiago.FrancoAixela@rhul.ac.uk</p>
             </h3>
             <br>
             <h3 class="info">Indicazioni mail:
                 <p>Inserire <b>[AI]</b> come prefisso oggetto (mail filter)</p>
-                <p>Risponde alle mail principalmente il Martedì</p>
             </h3>
             <br>
             <h3 class="info">Sito:
-                <p><a class="btn btn-success" id="inner" href="https://elearning.uniroma1.it/theme/continuum/infocourse.php?course=13728&popup=1">Vai</a></p>
+                <p><a class="btn btn-success" id="inner" href="https://www.diag.uniroma1.it/nardi/Didattica/AI/index-22-23.html">Vai</a></p>
             </h3>
-            <br>https://elearning.uniroma1.it/course/view.php?id=15391
+            <br>
             <h3 class="info">Moodle:
-                <p>Non disponibile</p>
+                <p><a class="btn btn-success" id="inner" href="https://elearning.uniroma1.it/course/view.php?id=15391">Vai</a></p>
+            </h3>
+            <br>
+            <h3 class="info">Ricevimento:
+                <p>Non indicato, ma probabilmente con appuntamento</p>
             </h3>
             <br>
             <h3 class="info">Esame:
                 <p>Prova scritta con 6 domande: 3 su, 3 su</p>
                 <p><i>Alternativa: </i> 2 esoneri (inizio novembre, metà dicembre)</p>
+            </h3>
+            <br>
+            <h3 class="info">Lezioni registrate:
+                <p>Non disponibile</p>
             </h3>
         </div>
         <div class="row" id="but">
