--- a/Primo_anno/Primo_semestre/DL/dl.html
+++ b/Primo_anno/Primo_semestre/DL/dl.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiUni - Your personal course organizer</title>
+    <title>Deep Learning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
     <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
@@ -26,7 +26,7 @@
             </h3>
             <br>
             <h3 class="info">Indicazioni mail:
-                <p>Nessuna indicazione in particolare</p>
+                <p>Nessuna informazione</p>
             </h3>
             <br>
             <h3 class="info">Sito:
@@ -38,11 +38,15 @@
             </h3>
             <br>
             <h3 class="info">Ricevimento:
-                <p>Non disponibile</p>
+                <p>Non indicato, ma probabilmente con appuntamento</p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>Discussione progetto</p>
+                <p>Discussion progetto</p>
+            </h3>
+            <br>
+            <h3 class="info">Lezioni registrate:
+                <p>Caricate su Classroom qualche tempo dopo la lezione</p>
             </h3>
         </div>
         <div class="row" id="but">
