--- a/Primo_anno/Primo_semestre/ML/ml.html
+++ b/Primo_anno/Primo_semestre/ML/ml.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiUni - Your personal course organizer</title>
+    <title>Machine Learning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
     <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
@@ -44,6 +44,10 @@
             <br>
             <h3 class="info">Esame:
                 <p>Prova scritta + 2 homework</p>
+            </h3>
+            <br>
+            <h3 class="info">Lezioni registrate:
+                <p>Link su Classroom alle lezione registrate dei precedenti anni accademici</p>
             </h3>
         </div>
         <div class="row" id="but">
