--- a/Primo_anno/Primo_semestre/NN/nn.html
+++ b/Primo_anno/Primo_semestre/NN/nn.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiUni - Your personal course organizer</title>
+    <title>Neural Networks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
     <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
@@ -28,11 +28,11 @@
             </h3>
             <br>
             <h3 class="info">Indicazioni mail:
-                <p>Inserire <b>[ML]</b> come prefisso oggetto (mail filter)</p>
+                <p>Nessuna informazione</p>
             </h3>
             <br>
             <h3 class="info">Sito:
-                <p><a class="btn btn-success" id="inner" href="https://sites.google.com/diag.uniroma1.it/machine-learning/">Vai</a></p>
+                <p><a class="btn btn-success" id="inner" href="https://sites.google.com/uniroma1.it/neuralnetworks2022/">Vai</a></p>
             </h3>
             <br>
             <h3 class="info">Codice Classroom:
@@ -44,7 +44,9 @@
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>Prova scritta + 2 homework</p>
+                <p>Homework: 10%</p>
+                <p>Presentazione progetto: 60%</p>
+                <p>2 domande teoriche durante la presentazione: 30%</p>
             </h3>
         </div>
         <div class="row" id="but">
