--- a/Primo_anno/Primo_semestre/R1/r1.html
+++ b/Primo_anno/Primo_semestre/R1/r1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiUni - Your personal course organizer</title>
+    <title>Robotics 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
     <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
@@ -18,27 +18,35 @@
         </div>
         <div class="row" id="caption">
             <h3 id="info">Prof:
-                <p>Luca Iocchi</p>
+                <p>Alessandro De Luca</p>
             </h3>
             <br>
-            <h3 class="info">Mail: deluca [at] diag [dot] uniroma1 [dot] it robotics1_2022-23@diag.uniroma1.it
-                <p>iocchi@diag.uniroma1.it</p>
+            <h3 class="info">Mail:
+                <p>deluca@diag.uniroma1.it</p>
             </h3>
             <br>
             <h3 class="info">Indicazioni mail:
-                <p>Inserire <b>[ML]</b> come prefisso oggetto (mail filter)</p>
+                <p>Inserire <b>[AI]</b> come prefisso oggetto (mail filter)</p>
             </h3>
             <br>
-            <h3 class="info">Sito: http://www.diag.uniroma1.it/~deluca/rob1_en.php
-                <p>ubkbjnjb</p>
+            <h3 class="info">Sito:
+                <p><a class="btn btn-success" id="inner" href="http://www.diag.uniroma1.it/~deluca/rob1_en.php">Vai</a></p>
             </h3>
             <br>
-            <h3 class="info">Google Group: http://www.diag.uniroma1.it/~deluca/rob1_en.php#GG
-                <p>jlb lnjk</p>
+            <h3 class="info">Google Group :
+                <p><a class="btn btn-success" id="inner" href="https://groups.google.com/a/diag.uniroma1.it/g/robotics1_2022-23">Vai</a></p>
+            </h3>
+            <br>
+            <h3 class="info">Ricevimento:
+                <p>Non indicato, ma probabilmente con appuntamento</p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>Prova scritta</p>
+                <p>Esame scritto + Orale</p>
+            </h3>
+            <br>
+            <h3 class="info">Lezioni registrate:
+                <p>Sono presenti sul canale YouTube del DIAG le lezione registrate dei precedenti anni accademici</p>
             </h3>
         </div>
         <div class="row" id="but">
