--- a/Primo_anno/Primo_semestre/RL/rl.html
+++ b/Primo_anno/Primo_semestre/RL/rl.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiUni - Your personal course organizer</title>
+    <title>Reinforcement Learning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
     <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
@@ -30,7 +30,7 @@
             </h3>
             <br>
             <h3 class="info">Sito:
-                <p><a class="btn btn-success" id="inner" href="https://sites.google.com/diag.uniroma1.it/machine-learning/">Vai</a></p>
+                <p>Non disponibile</p>
             </h3>
             <br>
             <h3 class="info">Codice Classroom:
@@ -38,11 +38,11 @@
             </h3>
             <br>
             <h3 class="info">Ricevimento:
-                <p>Giovedì, 15:30-17:30pm previo appuntamento</p>
+                <p>Mercoledì, 15:30-17:30pm previo appuntamento</p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>3 homeworks (15% ciascuno) o esame scritto: 45%;</p>
+                <p>3 homeworks (15% ciascuno) o esame scritto: 45%</p>
                 <p>Progetto finale: 50%</p>
                 <p>Bonus di partecipazione alla lezione: 5%</p>
             </h3>
