--- a/Primo_anno/Primo_semestre/RP/rp.html
+++ b/Primo_anno/Primo_semestre/RP/rp.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WikiUni - Your personal course organizer</title>
+    <title>Robot Programming</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../css/course.css">
     <link rel="icon" type="image/x-icon" href="../../../pic/unirm1.ico">
@@ -18,27 +18,35 @@
         </div>
         <div class="row" id="caption">
             <h3 id="info">Prof:
-                <p>Luca Iocchi</p>
+                <p>Giorgio Grisetti</p>
             </h3>
             <br>
             <h3 class="info">Mail:
-                <p>iocchi@diag.uniroma1.it</p>
+                <p>grisetti@diag.uniroma1.it</p>
             </h3>
             <br>
             <h3 class="info">Indicazioni mail:
-                <p>Inserire <b>[ML]</b> come prefisso oggetto (mail filter)</p>
+                <p>Inserire <b>[RobotProgramming]</b> come prefisso oggetto (mail filter)</p>
             </h3>
-            <br>kbrncgq
+            <br>
             <h3 class="info">Sito:
-                <p>ubkbjnjb</p>
+                <p><a class="btn btn-success" id="inner" href="https://sites.google.com/diag.uniroma1.it/robotprogramming202223/home">Vai</a></p>
             </h3>
             <br>
             <h3 class="info">Classroom:
-                <p>jlb lnjk</p>
+                <p>Non disponibile</p>
+            </h3>
+            <br>
+            <h3 class="info">Ricevimento:
+                <p>Lunedì, 11.00-13.00 previo appuntamento</p>
             </h3>
             <br>
             <h3 class="info">Esame:
-                <p>knhbkjuhjl</p>
+                <p>Progetto</p>
+            </h3>
+            <br>
+            <h3 class="info">Lezioni registrate:
+                <p>Non disponibili</p>
             </h3>
         </div>
         <div class="row" id="but">
