Risolto errore link home

--- a/Primo_anno/Primo_semestre/ps.html
+++ b/Primo_anno/Primo_semestre/ps.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row" id="main">
             <a class="btn btn-success" id="orari" href="https://docs.google.com/spreadsheets/d/16g8h6ZPo9r9MDEV0L8On_UrVVa9PYCeu/edit#gid=1999740778">Orari</a>
-            <a class="btn btn-success" id="home" href="../../index.html">Home</a>
+            <a class="btn btn-success" id="home" href="../../index.php">Home</a>
         </div>
     </div>
 </body>
